--- a/hiroshimAR/information.html
+++ b/hiroshimAR/information.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />  
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>information</title>
         <style>
 				
@@ -27,7 +27,7 @@
 <body>
 <p class="image">
 <!--
-<img src="./logo.png">
+<img width="100%" src="./logo.png">
  -->
 </p>
 <p class="subject">
