--- a/hiroshimAR/detail.html
+++ b/hiroshimAR/detail.html
@@ -10,17 +10,18 @@
 		}
 		
 		body {
-			background-color: black;
+			background-color: white;
 			margin: 0;
 			padding: 0;
 		}
-		
+
+/*
 		a {
 			color: #999999
 		}
 		
 		.photograph_window {
-			background-color: black;
+			background-color: white;
 			color: #aaaaaa;
 			width: 100%;
 			height: 100%;
@@ -102,7 +103,7 @@
 			height: 1px;
 			background-image: -webkit-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
 		}
-		
+*/		
 		#routeButton {
 			text-align: center;
 		}
